packages/parser/test/parser/E0132.txt
mut test
===== err =====
anonymous:1:9: ParseError: E0132 - Expected variable declaration type or initializer after name
1 | mut test
  |         ^
